<resources>
    <string name="app_name">CP2</string>
    <string name="piso_branco_baixo_brilho">Piso Branco Baixo Brilho</string>
    <string name="informe_o_material_que_deseja">Informe o material que deseja:</string>
    <string name="piso_albania_45x45">Piso Albania 45x45</string>
    <string name="porcelanato_perlato">Porcelanato Perlato</string>
    <string name="revestimento_mosaico">Revestimento Mosaico</string>
    <string name="informe_a_medida_em_m2">Informe a Medida em m²</string>
    <string name="ultra_frete_mega_r_pido">Ultra Frete Mega Rápido</string>
    <string name="calcular">Calcular</string>
</resources>